Final refactoring. Implemented test class that uses inputs from projects resources folder to test algorithm.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - MazeSolverTester",
+            "request": "launch",
+            "mainClass": "app.MazeSolverTester",
+            "projectName": "Solving a Maze - Bradley Read"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - MazeSolver",
             "request": "launch",
             "mainClass": "app.MazeSolver",
